# ros2_ws

./: .gitignore  .gitmodules  README.md
install/: local_setup.sh  setup.sh
install/monitor_system/share/monitor_system/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/monitor_system/share/monitor_system/cmake/: monitor_systemConfig.cmake
install/my-test-package/share/my-test-package/: package.sh
install/pros_library/share/pros_library/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/system_interfaces/share/system_interfaces/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/system_interfaces/share/system_interfaces/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  rosidl_cmake-extras.cmake  (+21 more)
install/template/share/template/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/test_node/share/test_node/: package.bash  package.sh  package.zsh
log/: latest_build
src/monitor_system/: CMakeLists.txt  package.xml
src/monitor_system/src/: log.cpp  watchdog.cpp
src/pros_library/: setup.cfg  setup.py
src/pros_library/pros_library/: pros_node.py
src/system_interfaces/: CMakeLists.txt
src/template/: setup.cfg  setup.py
src/template/template/: template.py  template.py.bak
src/test_node/: package.xml  setup.py
src/test_node/test_node/: test_node.py
(+41 files in other folders)
